# evoclaw

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/beta-notes/: TEMPLATE.md  v1.0.0-beta.1.md
.github/release-notes/: TEMPLATE.md
.github/workflows/: ci.yml  release.yml  tap-update.yml
crates-ext/evo-acp-client/: Cargo.toml  registry.json
crates-ext/evo-acp-client/src/: lib.rs
crates-ext/evo-gateway/: Cargo.toml
crates-ext/evo-gateway/src/: lib.rs  main.rs
crates-ext/evo-gateway/static/: index.html  zh.html
crates-ext/evo-mcp-client/: Cargo.toml  registry.json
crates-ext/evo-mcp-client/src/: lib.rs
crates-ext/evo-stdio-rpc/: Cargo.toml
crates-ext/evo-stdio-rpc/src/: lib.rs
crates/evo-cli/: Cargo.toml
crates/evo-cli/src/: config.rs  lib.rs  mcp_tools.rs  onboard.rs  playbook.rs  slash.rs  task.rs  terminal_ui.rs  theme.rs  tui.rs  ui.rs
crates/evo-cli/src/commands/: agent.rs  channel.rs  config.rs  diag.rs  gateway.rs  mcp.rs  mod.rs  model.rs  onboard.rs  profile.rs  secret.rs  skill.rs
crates/evo-cli/src/onboard/: auth.rs  catalog.rs  mod.rs  model.rs  paths.rs  persist.rs  picker.rs
crates/evo-cli/src/ui/: event.rs  input.rs  markdown.rs  mod.rs  renderer.rs  state.rs
crates/evo-core/: Cargo.toml
crates/evo-core/src/: channel.rs  channel_config.rs  channel_router.rs  compression.rs  discord.rs  distillation.rs  lib.rs  local_pipe.rs  memory.rs  prompt.rs  reflection.rs  runtime.rs  session.rs  session_store.rs  skill.rs  skill_tree.rs  slack.rs  summary.rs  telegram.rs
crates/evo-core/src/runtime/: exec.rs  mod.rs  reflect.rs  util.rs
crates/evo-core/tests/: token_budget.rs
crates/evo-mock-provider/: Cargo.toml
crates/evo-mock-provider/src/: lib.rs
crates/evo-policy/: Cargo.toml
crates/evo-policy/src/: cost.rs  hook.rs  lib.rs  policy.rs  redact.rs
crates/evo-policy/src/redact/: classify.rs  mod.rs  redactor.rs  vault.rs
crates/evo-providers/: Cargo.toml
crates/evo-providers/src/: acp.rs  anthropic.rs  azure.rs  browser.rs  copilot.rs  fingerprint.rs  lib.rs  openai.rs
crates/evo-tools/: Cargo.toml
crates/evo-tools/src/: lib.rs
crates/evo-tools/src/tools/: ask.rs  browser.rs  browser_profile.rs  browser_session.rs  listdir.rs  login_detect.rs  mod.rs  patch.rs  read.rs  secret_inject.rs  shell.rs  skill.rs  web.rs  write.rs
docs/: BETA-NOTES.md  agents.md  architecture.md  channels.md  contributing.md  getting-started.md  installation.md  mcp.md  usage.md
docs/skills/: browser-login-download.yaml  uae-events-daily.yaml
docs/zh/: README.md  agents.md  architecture.md  channels.md  contributing.md  getting-started.md  installation.md  mcp.md  usage.md
scripts/: check.sh  update_formula.py
