[package]
name         = "evo-acp-client"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
async-trait = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
directories = { workspace = true }
chrono      = { workspace = true }
evo-stdio-rpc = { workspace = true }
