[package]
name         = "evo-gateway"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[[bin]]
name = "evo-gateway"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = { workspace = true }
eyre           = { workspace = true }
chrono         = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait    = { workspace = true }
futures        = { workspace = true }
directories    = { workspace = true }
evo-core       = { workspace = true }
evo-providers  = { workspace = true }
evo-tools      = { workspace = true }
evo-policy     = { workspace = true }

[dev-dependencies]
evo-mock-provider = { workspace = true }
