[package]
name         = "evo-cli"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[lib]
path = "src/lib.rs"

# Two binaries — `evo` (compact) and `evoclaw` (long-form alias). Both call
# evo_cli::entry(). Cargo auto-discovers everything under src/bin/.

[dependencies]
clap          = { workspace = true }
tokio         = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
toml          = { workspace = true }
eyre          = { workspace = true }
directories   = { workspace = true }
chrono        = { workspace = true }
tracing       = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait   = { workspace = true }
evo-core      = { workspace = true }
evo-providers = { workspace = true }
evo-tools     = { workspace = true }
evo-policy    = { workspace = true }
evo-acp-client = { workspace = true }
evo-mcp-client = { workspace = true }
reqwest       = { workspace = true }

[features]
default = []
