[package]
name         = "evo-core"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
serde_yaml    = { workspace = true }
tokio         = { workspace = true }
async-trait   = { workspace = true }
futures       = { workspace = true }
chrono        = { workspace = true }
eyre          = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
evo-providers = { workspace = true }
evo-tools     = { workspace = true }
evo-policy    = { workspace = true }
reqwest           = { workspace = true }
sha1              = { workspace = true }
sha2              = { workspace = true }
hex               = { workspace = true }
tokio-tungstenite = { workspace = true }

[dev-dependencies]
evo-mock-provider = { workspace = true }
toml              = { workspace = true }
