[package]
name         = "evo-mock-provider"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
evo-providers = { workspace = true }
serde_json    = { workspace = true }
async-trait   = { workspace = true }
futures       = { workspace = true }
tokio         = { workspace = true }
