[package]
name         = "evo-providers"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
futures     = { workspace = true }
reqwest     = { workspace = true }
sha2        = { workspace = true }
hex         = { workspace = true }
eventsource-stream = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
evo-acp-client = { workspace = true }
