[package]
name         = "evo-tools"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true

[lib]
path = "src/lib.rs"

[dependencies]
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
async-trait   = { workspace = true }
inventory     = { workspace = true }
thiserror     = { workspace = true }
tracing       = { workspace = true }
reqwest       = { workspace = true }
evo-policy    = { workspace = true }
evo-providers = { workspace = true }
